# ai-response-auditor

./: .env.example  .gitignore  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  secret-scan.yml
apps/: __init__.py
apps/api/: README.md  __init__.py  audits.py  errors.py  main.py
apps/web/: README.md  components.json  next.config.ts  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  providers.tsx
apps/web/components/: locale-selector.tsx  service-readiness.tsx  text-editor.tsx  workspace-shell.tsx
apps/web/lib/: audits.ts  canonical-text.ts  claim-highlights.ts  locale.tsx  readiness.ts  revisions.ts
apps/web/test/: canonical-text.test.ts  localization.test.ts  revisions.test.ts  setup.ts  smoke.test.mjs  workspace-shell.test.tsx
apps/worker/: README.md  __init__.py
backend/: __init__.py
backend/auditor/: __init__.py  config.py  logging.py  ollama_runtime.py  readiness.py
backend/auditor/audits/: __init__.py  claims.py  evaluation.py  overstatement.py  revisions.py  service.py
backend/auditor/checks/: __init__.py  findings.py  numerical.py
backend/auditor/db/: __init__.py  models.py  session.py
backend/auditor/domain/: __init__.py  audits.py  identifiers.py  scoring.py
backend/auditor/providers/: __init__.py  fake.py  instruction.py
backend/auditor/text/: __init__.py  sentences.py
backend/tests/: test_api.py  test_api_logging.py  test_audit_persistence.py  test_audit_service.py  test_claim_extraction.py  test_config.py  test_instruction_models.py  test_numerical_checks.py  test_ollama_runtime.py  test_overstatement_checks.py  test_real_audit_smoke.py  test_review_persistence.py  test_revisions.py  test_scoring.py  test_sentence_splitting.py  test_workspace_smoke.py
docs/: PLAN.md
docs/adr/: 0001-github-flow.md
docs/architecture/: unicode-offsets.md
docs/development/: ollama.md
docs/github/: branch-protection.md
fixtures/text/: numerical_checks.json  overstatement_checks.json  sentence_offsets.json
infra/ollama/: compose.amd.yml
migrations/: README.md  env.py
migrations/versions/: 20260714_0001_audit_foundation.py  20260714_0002_validate_claim_spans.py  20260714_0003_audit_api_contract.py
scripts/: __init__.py  check_ollama.py  generate_openapi.py  scan_secrets.py  setup_ollama.py  smoke_infra.py  smoke_ollama.py
(+6 files in other folders)
