[project]
name = "evidence-grounded-writing-auditor"
version = "0.0.0"
description = "Local-first Evidence-Grounded Writing Auditor backend workspace."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.116,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "redis>=6.2,<8",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<10",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.uv]
package = false
required-version = ">=0.8,<1"
cache-dir = ".cache/uv"
