[project]
name = "evidence-grounded-writing-auditor"
version = "0.0.0"
description = "Local-first Evidence-Grounded Writing Auditor backend workspace."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.116,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "redis>=6.2,<8",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "detect-secrets>=1.5,<2",
  "httpx>=0.28,<1",
  "mypy>=2.3,<3",
  "pytest>=8.4,<10",
  "ruff>=0.15.21,<0.16",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.mypy]
python_version = "3.12"
exclude = ["backend/tests/"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101"]
"scripts/**" = ["S603", "S607"]

[tool.uv]
package = false
required-version = ">=0.8,<1"
cache-dir = ".cache/uv"
